--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,8 +28,8 @@
                 <button type="submit" class="btn btn-default">提交</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
-                <li th:if="${session.user == null}">
-                    <a href="https://github.com/login/oauth/authorize?client_id=3e9a0e7fcb670458c29a&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a>
+                <li th:if="${session.user != null}">
+                    <a href="/publish">发布</a>
                 </li>
                 <li class="dropdown" th:if="${session.user != null}">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
@@ -39,6 +39,9 @@
                         <li><a href="#">个人资料</a></li>
                         <li><a href="#">退出</a></li>
                     </ul>
+                </li>
+                <li th:if="${session.user == null}">
+                    <a href="https://github.com/login/oauth/authorize?client_id=3e9a0e7fcb670458c29a&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a>
                 </li>
             </ul>
         </div>
