--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -16,7 +16,7 @@
                     data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">白色社区</span>
             </button>
-            <a class="navbar-brand" href="#">白色社区</a>
+            <a class="navbar-brand" href="/">白色社区</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -52,17 +52,20 @@
             <form action="/publish" method="post">
                 <div class="form-group">
                     <label for="title">问题描述(简单扼要)：</label>
-                    <input type="text" class="form-control" id="title"  th:value="${title}" name="title" placeholder="问题标题...">
+                    <input type="text" class="form-control" id="title" th:value="${title}" name="title"
+                           placeholder="问题标题...">
                 </div>
                 <div class="form-group">
                     <label for="description">问题补充（必填，请参照右侧提示）：</label>
-                    <textarea name="description" id="description" th:text="${description}" class="form-control" cols="30"
+                    <textarea name="description" id="description" th:text="${description}" class="form-control"
+                              cols="30"
                               rows="10"></textarea>
                 </div>
 
                 <div class="form-group">
                     <label for="tag">添加标签：</label>
-                    <input type="text" class="form-control" id="tag" th:value="${tag}" name="tag" placeholder="输入标签，以逗号分隔">
+                    <input type="text" class="form-control" id="tag" th:value="${tag}" name="tag"
+                           placeholder="输入标签，以逗号分隔">
                 </div>
                 <span class="alert alert-danger" th:text="${error}" th:if="${error != null}"></span>
                 <button type="submit" class="btn btn-success btn-publish">发布</button>
